Tcc quase pronto

--- a/PlaylistNameSort.Mvc/Views/Home/GenerateNameSortList.cshtml
+++ b/PlaylistNameSort.Mvc/Views/Home/GenerateNameSortList.cshtml
@@ -36,7 +36,7 @@
                         @userName[count++]
                     </td>
                     <td>
-                        @item
+                      <a href="~/Views/Home/Teste.cshtml">Prosseguir!</a>
                     </td>
                 </tr>
             }
