--- a/PlaylistNameSort.Mvc/Views/Home/Index.cshtml
+++ b/PlaylistNameSort.Mvc/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="jumbotron">
-    <h2>Play List Name Sort é um Web App para gerar uma playlist com músicas das letras do seu nome!</h2>
+    <h2>Olá! Meu nome é Fran! Estou para me formar e decidi utilizar o algoritmo KNN, implementado por mim, para gerar playlists no spotify, clique e confira!</h2>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <p>            
-            <a href=@ViewBag.AuthUri class="btn btn-primary btn-lg">Gerar nova playlist!</a>
+            <a href=@ViewBag.AuthUri class="btn btn-primary btn-lg">Gerar novas playlists!</a>
         </p>
     </div>
 </div>
